feat: [CET-1349] Add pipeline variables for CET collector URL & agent token

--- a/pipeline-service/service/BUILD.bazel
+++ b/pipeline-service/service/BUILD.bazel
@@ -58,6 +58,7 @@ java_binary(
         "//clients/access-control/sdk:module",
         "//clients/audit:module",
         "//clients/ci:module",
+        "//clients/error-tracking:module",
         "//clients/ng-variables:module",
         "//clients/ngsettings:module",
         "//clients/notification:module",
